--- a/src/app/modules/projects/pages/projects/projects.component.html
+++ b/src/app/modules/projects/pages/projects/projects.component.html
@@ -4,7 +4,7 @@
 
     <div class="row mt-4">
       @for (project of projects; track project.id) {
-        <div class="col-lg-4 col-md-6 col-12">
+        <div [@fadeInOnEnter] class="col-lg-4 col-md-6 col-12">
           <project-card [project]="project"></project-card>
         </div>
       }
