--- a/src/app/modules/projects/components/project-technology/project-technology.component.scss
+++ b/src/app/modules/projects/components/project-technology/project-technology.component.scss
@@ -1,7 +1,7 @@
 @import 'styles/kep-imports';
 
 .project-technology {
-  margin-left: 0.5rem;
+  margin-left: 0.25rem;
   font-size: 0.8rem;
   color: #fff;
   border-radius: 10px;
@@ -10,12 +10,30 @@
 
 .technology-Django {
   background-image: linear-gradient(141deg, #092e20, 60%, #b6d7cb);
-  box-shadow: 0px 0px 10px #91aa91 !important;
+
+  &:hover {
+    box-shadow: 0px 0px 5px #91aa91 !important;
+  }
 }
 
 .technology-Python {
   background-image: linear-gradient(141deg, #3979aa, #ffe974);
-  box-shadow: 0px 0px 10px #91aa91;
+
+  &:hover {
+    box-shadow: 0px 0px 5px #91aa91;
+  }
+}
+
+.technology-FastAPI {
+  background: #0d9b8e;
+
+  &:hover {
+    box-shadow: 0px 0px 5px #0d9b8e;
+  }
+
+  @include dark-layout {
+    background: #196159;
+  }
 }
 
 .technology-Frontend {
@@ -27,5 +45,17 @@
 
   &:hover {
     box-shadow: 0px 0px 5px #f0dc3f;
+  }
+}
+
+.technology-NodeJS {
+  background: #e8d44d;
+
+  @include dark-layout {
+    background: #b4a53c;
+  }
+
+  &:hover {
+    box-shadow: 0px 0px 5px #e8d44d;
   }
 }
