--- a/src/@core/components/core-menu/horizontal/item/item.component.html
+++ b/src/@core/components/core-menu/horizontal/item/item.component.html
@@ -25,9 +25,9 @@
     <kep-icon class="font-medium-4 text-primary mr-50" type="duotone" [name]="item.icon"></kep-icon>
     <span>{{ item.translate | translate }}</span>
     @if (item.id == 'contests' || item.id == 'arena' || item.id == 'projects') {
-      <span class="badge ml-25 new-events-count badge-pill badge-primary">
-        {{ 1 }}
-      </span>
+<!--      <span class="badge ml-25 new-events-count badge-pill badge-primary">-->
+<!--        {{ 1 }}-->
+<!--      </span>-->
     }
   </ng-template>
 }
