--- a/src/@core/components/core-menu/vertical/item/item.component.html
+++ b/src/@core/components/core-menu/vertical/item/item.component.html
@@ -28,9 +28,9 @@
     <kep-icon class="font-large-1 text-primary" type="duotone" [name]="item.icon"></kep-icon>
     <span class="menu-title text-truncate">{{ item.translate | translate }}</span>
     @if (item.id == 'contests' || item.id == 'arena'|| item.id == 'projects') {
-      <span style="transition: 0.5s ease;" class="badge ml-1 new-events badge-pill badge-primary">
-        {{ 1 }}
-      </span>
+<!--      <span style="transition: 0.5s ease;" class="badge ml-1 new-events badge-pill badge-primary">-->
+<!--        {{ 1 }}-->
+<!--      </span>-->
     }
   </ng-template>
 }
