[TEMP] new-event | arena

--- a/src/@core/components/core-menu/horizontal/collapsible/collapsible.component.html
+++ b/src/@core/components/core-menu/horizontal/collapsible/collapsible.component.html
@@ -12,8 +12,8 @@
   <ng-template #itemContent>
     <kep-icon class="font-medium-4 mr-50 text-primary" type="duotone" [name]="item.icon"></kep-icon>
     <span>{{ item.translate | translate }}</span>
-    @if (item.id == 'competitions' || item.id == 'practice') {
-<!--      <span class="badge ml-25 badge-yellow badge-pill badge-glow">New</span>-->
+    @if (item.id == 'competitions') {
+      <span class="badge ml-25 badge-yellow badge-pill badge-glow">New</span>
     }
   </ng-template>
   <!-- sub-menu item/collapsible -->
