[REFACTORING] arena page icon

--- a/src/app/modules/arena/pages/arena/arena.component.html
+++ b/src/app/modules/arena/pages/arena/arena.component.html
@@ -43,7 +43,7 @@
 
     <div class="col-lg-8 col-12 offset-lg-2">
       <h1 [@fadeInUpOnEnter] class="mt-1 mb-2 text-center">
-        <kep-icon name="contest" size="large-3" type="duotone" color="warning"></kep-icon>
+        <kep-icon name="arena" size="large-3" type="duotone" color="warning"></kep-icon>
         <div class="text-dark mt-2 mb-2">{{ 'Arena' | translate }}</div>
       </h1>
 
