[REFACTORING] empty-result component

--- a/src/app/shared/components/empty-result/empty-result.component.html
+++ b/src/app/shared/components/empty-result/empty-result.component.html
@@ -1,5 +1,5 @@
 <div class="full-height text-center my-4">
   <kep-icon name="search-list" color="primary" class="mb-2" type="duotone"/>
-  <p class="text-center font-weight-bolder font-medium-5">{{ 'NoResultFound' | translate }}</p>
-  <p>{{ 'NoResultFoundText' | translate }}</p>
+  <p class="text-center font-weight-bolder font-medium-5">{{ title | translate }}</p>
+  <p>{{ text | translate }}</p>
 </div>
