[REFACTORING] section-in-queue | empty result

--- a/src/app/modules/challenges/pages/challenges/sections/section-in-queue/section-in-queue.component.html
+++ b/src/app/modules/challenges/pages/challenges/sections/section-in-queue/section-in-queue.component.html
@@ -25,5 +25,11 @@
         (delete)="onChallengeCallDelete(challengeCall.id)"
       ></challenge-call-card>
     </div>
+  } @empty {
+    @if (!challengeCallsSkeletonVisible) {
+      <div class="col-12">
+        <empty-result/>
+      </div>
+    }
   }
 </div>
