[REFACTORING] arena list card

--- a/src/app/modules/arena/components/arena-list-card/arena-list-card.component.html
+++ b/src/app/modules/arena/components/arena-list-card/arena-list-card.component.html
@@ -1,4 +1,4 @@
-<div new-feature [show]="arena.status === -1" class="card" routerLink="tournament/{{ arena.id }}">
+<div [show]="arena.status === -1" class="card" new-feature routerLink="tournament/{{ arena.id }}">
   <div class="card-header">
     <div class="card-title text-dark">
       <kep-icon class="font-large-1" name="arena" type="duotone"></kep-icon>
