[REFACTORING] attempts-table

--- a/src/app/modules/problems/components/attempts-table/table/table.component.html
+++ b/src/app/modules/problems/components/attempts-table/table/table.component.html
@@ -38,13 +38,17 @@
         </td>
 
         <td>
-          <span *ngIf="contest" class="badge badge-light-success text-center" ngbTooltip="{{ attempt.created | date:'yyyy/MM/dd HH:mm:ss' }}">
-            {{ attempt.contestTime }}
-          </span>
-
-          <span *ngIf="!contest" class="badge badge-light-success text-center" style="width: 130px;">
-            {{ attempt.created | date:"yyyy/MM/dd HH:mm:ss" }}
-          </span>
+          @if (contest) {
+            <span
+              class="badge badge-light-success text-center"
+              ngbTooltip="{{ attempt.created | date:'yyyy/MM/dd HH:mm:ss' }}">
+              {{ attempt.contestTime }}
+            </span>
+          } @else {
+            <span class="badge badge-light-success text-center" style="width: 130px;">
+              {{ attempt.created | date:"yyyy/MM/dd HH:mm:ss" }}
+            </span>
+          }
         </td>
 
         <td>
