--- a/src/app/modules/account-settings/teams/teams.component.html
+++ b/src/app/modules/account-settings/teams/teams.component.html
@@ -3,45 +3,25 @@
     <div class="row">
       <div class="col-12">
         <div class="d-flex align-items-center mb-2">
-          <i data-feather="users" class="font-medium-3"></i>
+          <i class="font-medium-3" data-feather="users"></i>
           <h4 class="mb-0 ml-75">Teams</h4>
         </div>
       </div>
     </div>
     <div class="col-12">
       <div class="row">
-        @for (team of teams; track team; let i = $index) {
-          <div class="col-12 text-center">
-            <h3 class="mb-2">
-              {{ team.name }}
-            </h3>
-            <div class="row">
-              <div class="col">
-                <div class="avatar">
-                  <img [src]="team.createrAvatar" width="60" height="60" alt="member-avatar">
-                </div>
-                <br>
-                  <user-popover [username]="team.createrUsername">
-                  </user-popover>
-                </div>
-                @for (member of team.members; track member) {
-                  <div [ngClass]="{'col': member.username != team.createrUsername}">
-                    @if (member.username != team.createrUsername) {
-                      <div>
-                        <div class="avatar">
-                          <img [src]="member.avatar" width="60" height="60" alt="member-avatar">
-                        </div>
-                        <br>
-                          <user-popover [username]="member.username">
-                          </user-popover>
-                        </div>
-                      }
-                    </div>
-                  }
-                </div>
-              </div>
-            }
-          </div>
-        </div>
+        @for (team of teams; track team.id) {
+          <team-card [team]="team"></team-card>
+        }
       </div>
     </div>
+
+    <div class="col-6">
+      <div class="font-medium-4 font-weight-bolder">New team</div>
+      <label>Name</label>
+      <input class="form-control" [(ngModel)]="teamName">
+
+      <button (click)="createTeam()" class="btn btn-sm btn-primary mt-2">Create</button>
+    </div>
+  </div>
+</div>
