--- a/src/app/modules/problems/components/attempts-table/table/table.component.html
+++ b/src/app/modules/problems/components/attempts-table/table/table.component.html
@@ -15,123 +15,124 @@
       </tr>
     </thead>
     <tbody>
-      <tr
-        *ngFor="let attempt of attempts; index as i; trackBy:identify"
-        [@fadeInOnEnter]  
-        [ngClass]="{'bg-light-primary': attempt?.user?.username == currentUser?.username}">
-        <td>
-          <a href="javascript:;" (click)="clicked.emit(attempt.id)" *ngIf="attempt.canView; else other;">
-            <u>
-              {{ attempt.id }}
-            </u>
-          </a>
-          <ng-template #other>
-            <span *ngIf="!currentUser || contest; else elseBlock">{{ attempt.id }}</span>
-            <ng-template #elseBlock>
-              <kepcoin-spend-swal
-                [purchaseUrl]="'attempts/' + attempt.id + '/purchase/'"
-                [value]="attempt.kepcoinValue"
-                (success)="onPurchaseSuccess(attempt)">
-              </kepcoin-spend-swal>
+      @for (attempt of attempts; track attempt.id) {
+        <tr
+          [@fadeInOnEnter]
+          [ngClass]="{'bg-light-primary': attempt?.user?.username == currentUser?.username}">
+          <td>
+            <a href="javascript:;" (click)="clicked.emit(attempt.id)" *ngIf="attempt.canView; else other;">
+              <u>
+                {{ attempt.id }}
+              </u>
+            </a>
+            <ng-template #other>
+              <span *ngIf="!currentUser || contest; else elseBlock">{{ attempt.id }}</span>
+              <ng-template #elseBlock>
+                <kepcoin-spend-swal
+                  [purchaseUrl]="'attempts/' + attempt.id + '/purchase/'"
+                  [value]="attempt.kepcoinValue"
+                  (success)="onPurchaseSuccess(attempt)">
+                </kepcoin-spend-swal>
+              </ng-template>
             </ng-template>
-          </ng-template>
-        </td>
+          </td>
 
-        <td>
+          <td>
           <span *ngIf="contest" class="badge badge-light-success text-center" ngbTooltip="{{ attempt.created | date:'yyyy/MM/dd HH:mm:ss' }}">
             {{ attempt.contestTime }}
           </span>
 
-          <span *ngIf="!contest" class="badge badge-light-success text-center" style="width: 130px;">
+            <span *ngIf="!contest" class="badge badge-light-success text-center" style="width: 130px;">
             {{ attempt.created | date:"yyyy/MM/dd HH:mm:ss" }}
           </span>
-        </td>
+          </td>
 
-        <td>
+          <td>
           <span class="badge badge-glow badge-{{ attempt.lang }}">
             {{ attempt.langFull }}
           </span>
-        </td>
+          </td>
 
-        <td>
-          <contestant-view [user]="attempt.user" [team]="attempt.team"></contestant-view>
-        </td>
+          <td>
+            <contestant-view [user]="attempt.user" [team]="attempt.team"></contestant-view>
+          </td>
 
-        <td>
-          <div *ngIf="contest">
-            <a *ngIf="attempt?.contestProblem?.contest; else elseBlock" [routerLink]="['/competitions', 'contests', 'contest', attempt.contestProblem.contest, 'problem', attempt.contestProblem.symbol]">
-              <u class="text-primary">{{ attempt.contestProblem.symbol }}. {{ attempt.problemTitle }}</u>
-            </a>
-            
-            <ng-template #elseBlock>
-              <u class="text-primary">{{ attempt.contestProblem.symbol }}. {{ attempt.problemTitle }}</u>
-            </ng-template>
-          </div>
+          <td>
+            <div *ngIf="contest">
+              <a *ngIf="attempt?.contestProblem?.contest; else elseBlock" [routerLink]="['/competitions', 'contests', 'contest', attempt.contestProblem.contest, 'problem', attempt.contestProblem.symbol]">
+                <u class="text-primary">{{ attempt.contestProblem.symbol }}. {{ attempt.problemTitle }}</u>
+              </a>
 
-          <a *ngIf="!contest" [routerLink]="['/practice', 'problems', 'problem', attempt.problemId]">
-            <u class="text-primary">{{ attempt.problemId }}. {{ attempt.problemTitle }}</u>
-          </a>
-        </td>
-
-        <td [@bounce]="attempt.animationAcceptedState" [@shake]="attempt.animationWrongState">
-          <div *ngIf="contest && !currentUser?.isSuperuser; else elseBlock" [innerHTML]="attempt | attemptVerdictHTML">
-          </div>
-
-          <ng-template #elseBlock>
-            <div *ngIf="attempt.verdict != 1 && attempt.testCaseNumber > 1 && attempt.user.username == currentUser?.username; else elseBlock">
-              <div *ngIf="!attempt.canTestView">
-                <ng-template #tipContent>
-                  {{ 'ViewTest' | translate }} <kepcoin [value]="attempt.testCaseKepcoinValue"></kepcoin>
-                </ng-template>
-                <kepcoin-spend-swal
-                  [ngbTooltip]="tipContent"
-                  [purchaseUrl]="'attempts/' + attempt.id + '/purchase-test/'"
-                  [value]="attempt.testCaseKepcoinValue"
-                  [customContent]="true"
-                  (success)="onPurchaseTestSuccess(attempt)">
-                  <div [innerHTML]="attempt | attemptVerdictHTML"></div>
-                </kepcoin-spend-swal>
-              </div>
-  
-              <div *ngIf="attempt.canTestView">
-                <a ngbTooltip="{{ 'ViewTest' | translate }}"
-                  href="/api/attempts/{{ attempt.id }}/failed-test?number={{ attempt.testCaseNumber }}">
-                  <div [innerHTML]="attempt | attemptVerdictHTML"></div>
-                </a>
-              </div>
+              <ng-template #elseBlock>
+                <u class="text-primary">{{ attempt.contestProblem.symbol }}. {{ attempt.problemTitle }}</u>
+              </ng-template>
             </div>
-  
-            <ng-template #elseBlock>
-              <div [innerHTML]="attempt | attemptVerdictHTML"></div>
-            </ng-template>  
-          </ng-template>
-        </td>
 
-        <td>
+            <a *ngIf="!contest" [routerLink]="['/practice', 'problems', 'problem', attempt.problemId]">
+              <u class="text-primary">{{ attempt.problemId }}. {{ attempt.problemTitle }}</u>
+            </a>
+          </td>
+
+          <td [@bounce]="attempt.animationAcceptedState" [@shake]="attempt.animationWrongState">
+            <div *ngIf="contest && !currentUser?.isSuperuser; else elseBlock" [innerHTML]="attempt | attemptVerdictHTML">
+            </div>
+
+            <ng-template #elseBlock>
+              <div *ngIf="attempt.verdict != 1 && attempt.testCaseNumber > 1 && attempt.user.username == currentUser?.username || currentUser?.isSuperuser; else elseBlock">
+                <div *ngIf="!attempt.canTestView">
+                  <ng-template #tipContent>
+                    {{ 'ViewTest' | translate }} <kepcoin [value]="attempt.testCaseKepcoinValue"></kepcoin>
+                  </ng-template>
+                  <kepcoin-spend-swal
+                    [ngbTooltip]="tipContent"
+                    [purchaseUrl]="'attempts/' + attempt.id + '/purchase-test/'"
+                    [value]="attempt.testCaseKepcoinValue"
+                    [customContent]="true"
+                    (success)="onPurchaseTestSuccess(attempt)">
+                    <div [innerHTML]="attempt | attemptVerdictHTML"></div>
+                  </kepcoin-spend-swal>
+                </div>
+
+                <div *ngIf="attempt.canTestView">
+                  <a ngbTooltip="{{ 'ViewTest' | translate }}"
+                     href="/api/attempts/{{ attempt.id }}/failed-test?number={{ attempt.testCaseNumber }}">
+                    <div [innerHTML]="attempt | attemptVerdictHTML"></div>
+                  </a>
+                </div>
+              </div>
+
+              <ng-template #elseBlock>
+                <div [innerHTML]="attempt | attemptVerdictHTML"></div>
+              </ng-template>
+            </ng-template>
+          </td>
+
+          <td>
           <span class="badge badge-info badge-pill">
             {{ attempt.time }} {{ 'MS' | translate }}
           </span>
-        </td>
+          </td>
 
-        <td>
+          <td>
           <span class="badge badge-primary badge-pill">
             {{ attempt.memory }} {{ 'KB' | translate }}
           </span>
-        </td>
+          </td>
 
-        <td *ngIf="!hideSourceCodeSize">
+          <td *ngIf="!hideSourceCodeSize">
           <span class="badge badge-dark badge-pill">
             {{ attempt.sourceCodeSize }}
           </span>
-        </td>
+          </td>
 
-        <td *ngIf="currentUser?.isSuperuser">
-          <button class="btn btn-sm round btn-primary" (click)="rerun(attempt.id)">
-            <i data-feather="refresh-cw"></i>
-          </button>
-        </td>
+          <td *ngIf="currentUser?.isSuperuser">
+            <button class="btn btn-sm round btn-primary" (click)="rerun(attempt.id)">
+              <i data-feather="refresh-cw"></i>
+            </button>
+          </td>
 
-      </tr>
+        </tr>
+      }
     </tbody>
 
     <tfoot *ngIf="attempts?.length > 1">
