--- a/src/app/modules/account-settings/account-settings.component.html
+++ b/src/app/modules/account-settings/account-settings.component.html
@@ -39,7 +39,7 @@
               </ng-template>
             </li>
             <li [ngbNavItem]="Tab.Social" class="nav-item">
-              <a [ngbNavItem]="Tab.Social" class="nav-link d-flex py-75" ngbNavLink>
+              <a class="nav-link d-flex py-75" ngbNavLink>
                 <i class="font-medium-3 mr-1" data-feather="link"></i>
                 <span class="font-weight-bold">Social</span>
               </a>
@@ -48,8 +48,8 @@
               </ng-template>
             </li>
 
-            <li class="nav-item" ngbNavItem>
-              <a [ngbNavItem]="Tab.Skill" class="nav-link d-flex py-75" ngbNavLink>
+            <li class="nav-item" [ngbNavItem]="Tab.Skills">
+              <a class="nav-link d-flex py-75" ngbNavLink>
                 <i class="font-medium-3 mr-1" data-feather="activity"></i>
                 <span class="font-weight-bold">Skills</span>
               </a>
